--- a/CTFd/themes/core/templates/register.html
+++ b/CTFd/themes/core/templates/register.html
@@ -53,6 +53,13 @@
 						Your region.
 					</small>
 				</div>
+				<div class="form-group">
+					<b>{{ form.brack.label }}</b>
+					{{ form.brack(class="form-control", value=brack) }}
+					<small class="form-text text-muted">
+						Your bracket.
+					</small>
+				</div>
 
 				{{ form.nonce() }}
 
